fixed overlay not covering the whole project card

--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -43,8 +43,8 @@ a {
     height: 100%;
     background-color: none;
     object-fit: cover;
-    width: 305px;
-    height: 305px;
+    width: 300px;
+    height: 300px;
     border-radius: 10px;
     margin-top: 0.25rem;
 }
